examples/test/testpolicy5250.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5250
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key44: value31
      key26: value12
      key4: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value43
          key38: value7
          key49: value8
      podSelector:
        matchLabels:
          key25: value6
          key38: value44
